--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Players</h1>
+        <h1>NFL Fantasy League</h1>
     </header>
     <div id= "app"></div> 
     <script src="../js/app.js"></script>
