--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -8,7 +8,7 @@
     <title>NFL API</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <h1>NFL Fantasy League</h1>
     </header>
     <div id= "app"></div> 
